--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 /packer/key.json
 /packer/variables.json
+*.tfstate
+*.tfstate.*.backup
+*.tfstate.backup
+*.tfvars
+.terraform/
+/terraform/key.json
+/terraform/variables.tf
