--- a/packer/variables.json.example
+++ b/packer/variables.json.example
@@ -1,6 +1,6 @@
 {
     "folder_id": "b1geabb671l34ve18dji",
-    "service_acc_kf": "files/definetly_not_real_key.json",
+    "service_acc_kf": "packer/files/key.json",
     "subnet_id": "e9bjftr82hjbkb6p09jk",
     "source_image_id": "fd869u2laf181s38k2cr"
 }
